--- a/install
+++ b/install
@@ -73,7 +73,7 @@ echo ""
 echo -e "${WHT}Starting install ...${FIN}"
 sleep 2s
 
-if [[ `sudo dmesg | grep -w x86-64` ]]; then
+if [[ `sudo dmesg | grep x86-64` ]]; then
 	if [ -e /usr/bin/make ]; then
 		sudo apt update
 		make ccompile;
@@ -84,7 +84,7 @@ if [[ `sudo dmesg | grep -w x86-64` ]]; then
 	fi
 fi
 
-if [[ `sudo dmesg | grep -w arm64` ]]; then
+if [[ `sudo dmesg | grep arm64` ]]; then
 	if [ -e /usr/bin/make ]; then
 		sudo apt update
 		make ncompile;
