--- a/install
+++ b/install
@@ -12,7 +12,7 @@ echo -e -n "${PNK}[${FIN}${GRN}OK${FIN}${PNK}]${FIN}"
 }
 
 echo_jammy(){
-echo -e -n "${PNK}[${FIN}${GRN}Ubuntu Jammy Jellfish${FIN}${PNK}]${FIN}"
+echo -e -n "${PNK}[${FIN}${GRN}Ubuntu Jammy Jellyfish${FIN}${PNK}]${FIN}"
 }
 
 
