--- a/install
+++ b/install
@@ -11,10 +11,17 @@ echo_nok(){
 echo -e -n "${PNK}[${FIN}${GRN}OK${FIN}${PNK}]${FIN}"
 }
 
+echo_focal(){
+echo -e -n "${PNK}[${FIN}${GRN}Ubuntu Focal${FIN}${PNK}]${FIN}"
+}
+
 echo_jammy(){
 echo -e -n "${PNK}[${FIN}${GRN}Ubuntu Jammy Jellyfish${FIN}${PNK}]${FIN}"
 }
 
+echo_bullseye(){
+echo -e -n "${PNK}[${FIN}${GRN}Debian Bullseye${FIN}${PNK}]${FIN}"
+}
 
 echo_fail(){
 echo -n -e "${PNK}[${FIN}${RED}failed${FIN}${PNK}]${FIN}"
@@ -46,14 +53,24 @@ fi
 distro_check(){
 echo -e -n "${WHT}Checking Host Machine:${FIN} "
 sleep 1s
-if [[ `grep -w "jammy" "/etc/os-release"` ]]; then
-	echo_jammy
-	echo "";
-else
-	echo_fail
+if [[ `grep -w "focal" "/etc/os-release"` ]]; then
+	echo_focal
 	echo ""
-	derror
-	exit 1;
+else
+	if [[ `grep -w "jammy" "/etc/os-release"` ]]; then
+		echo_jammy
+		echo "";
+	else
+		if [[ `grep -w "bullseye" "/etc/os-release"` ]]; then
+			echo_bullseye
+			echo "";
+		else
+			echo_fail
+			echo ""
+			derror
+			exit;
+		fi
+	fi
 fi
 }
 
