--- a/install
+++ b/install
@@ -101,7 +101,7 @@ echo -e "${WHT}Starting install ...${FIN}"
 sleep 2s
 
 if [[ `sudo dmesg | grep x86-64` ]]; then
-	if [ -e /usr/bin/make ]; then
+	if [[ `command -v make` ]]; then
 		sudo apt update
 		make ccompile;
 	else
@@ -112,7 +112,7 @@ if [[ `sudo dmesg | grep x86-64` ]]; then
 fi
 
 if [[ `sudo dmesg | grep arm64` ]]; then
-	if [ -e /usr/bin/make ]; then
+	if [[ `command -v make` ]]; then
 		sudo apt update
 		make ncompile;
 	else
