--- a/install
+++ b/install
@@ -1,9 +1,9 @@
 #!/bin/bash
-RED="\e[1;31m"
-GRN="\e[1;32m"
-PNK="\e[1;35m"
-WHT="\e[1;37m"
-YLW="\e[1;33m"
+RED="\e[0;31m"
+GRN="\e[0;32m"
+PNK="\e[0;35m"
+TXT="\033[0m"
+YLW="\e[0;33m"
 FIN="\e[0m"
 
 echo_nok(){
@@ -24,16 +24,16 @@ echo -n -e "${PNK}[${FIN}${RED}failed${FIN}${PNK}]${FIN}"
 
 ierror(){
 echo
-echo -e "${WHT}Please check your internet connection and try again${FIN}."
+echo -e "${TXT}Please check your internet connection and try again${FIN}."
 }
 
 derror(){
 echo
-echo -e "${WHT}The OS you are running is not supported${FIN}."
+echo -e "${TXT}The OS you are running is not supported${FIN}."
 }
 
 internet_check(){
-echo -en "${WHT}Checking Internet Connection:${FIN} "
+echo -en "${TXT}Checking Internet Connection:${FIN} "
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
 	echo_nok;
 	echo "";
@@ -46,7 +46,7 @@ fi
 }
 
 distro_check(){
-echo -en "${WHT}Checking Host Machine:${FIN} "
+echo -en "${TXT}Checking Host Machine:${FIN} "
 sleep 1s
 if [[ `grep -w "jammy" "/etc/os-release"` ]]; then
 	echo_jammy;
@@ -68,29 +68,29 @@ echo ""
 internet_check
 distro_check
 echo ""
-echo -e "${WHT}Starting install${FIN} ..."
+echo -e "${TXT}Starting install${FIN} ..."
 sleep 1s
 if [[ `uname -m | grep x86_64` ]]; then
 	if [[ `command -v make` ]]; then
-		sudo apt update;
-		sudo apt upgrade -y;
+		sudo debconf-apt-progress -- apt update;
+		sudo debconf-apt-progress -- apt upgrade -y;
 		make ccompile;
 	else
-		sudo apt update;
-		sudo apt upgrade -y;
-		sudo apt install -y make;
+		sudo debconf-apt-progress -- apt update;
+		sudo debconf-apt-progress -- apt upgrade -y;
+		sudo debconf-apt-progress -- apt install -y make;
 		make ccompile;
 	fi
 fi
 if [[ `uname -m | grep aarch64` ]]; then
 	if [[ `command -v make` ]]; then
-		sudo apt update;
-		sudo apt upgrade -y;
+		sudo debconf-apt-progress -- apt update;
+		sudo debconf-apt-progress -- apt upgrade -y;
 		make ncompile;
 	else
-		sudo apt update;
-		sudo apt upgrade -y;
-		sudo apt install -y make;
+		sudo debconf-apt-progress -- apt update;
+		sudo debconf-apt-progress -- apt upgrade -y;
+		sudo debconf-apt-progress -- apt install -y make;
 		make ncompile;
 	fi
 fi
