--- a/install
+++ b/install
@@ -1,4 +1,5 @@
 #!/bin/bash
+
 RED="\e[0;31m"
 GRN="\e[0;32m"
 PNK="\e[0;35m"
@@ -6,91 +7,62 @@ TXT="\033[0m"
 YLW="\e[0;33m"
 FIN="\e[0m"
 
-echo_nok(){
-echo -e -n "${PNK}[${FIN}${GRN}OK${FIN}${PNK}]${FIN}"
-}
-
-echo_jammy(){
-echo -e -n "${PNK}[${FIN}${GRN}Ubuntu Jammy Jellyfish${FIN}${PNK}]${FIN}"
-}
-
-echo_bullseye(){
-echo -e -n "${PNK}[${FIN}${GRN}Debian Bullseye${FIN}${PNK}]${FIN}"
-}
-
-echo_fail(){
-echo -n -e "${PNK}[${FIN}${RED}failed${FIN}${PNK}]${FIN}"
-}
-
-ierror(){
-echo
-echo -e "${TXT}Please check your internet connection and try again${FIN}."
-}
-
-derror(){
-echo
-echo -e "${TXT}The OS you are running is not supported${FIN}."
-}
-
-internet_check(){
+echo ""
 echo -en "${TXT}Checking Internet Connection:${FIN} "
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
-	echo_nok;
+	echo -en "${PNK}[${FIN}${GRN}OK${FIN}${PNK}]${FIN}";
 	echo "";
 else
-	echo_fail;
+	echo -en "${PNK}[${FIN}${RED}failed${FIN}${PNK}]${FIN}";
 	echo "";
-	ierror;
+	echo -e "${TXT}Please check your internet connection and try again${FIN}.";
 	exit 0;
 fi
-}
-
-distro_check(){
 echo -en "${TXT}Checking Host Machine:${FIN} "
 sleep 1s
 if [[ `grep -w "jammy" "/etc/os-release"` ]]; then
-	echo_jammy;
+	echo -en "${PNK}[${FIN}${GRN}Ubuntu Jammy Jellyfish${FIN}${PNK}]${FIN}";
 	echo "";
 else
-	if [[ `grep -w "bullseye" "/etc/os-release"` ]]; then
-		echo_bullseye;
+	if [[ `grep -w "kinetic" "/etc/os-release"` ]]; then
+		echo -en "${PNK}[${FIN}${GRN}Ubuntu Kinetic Kudu${FIN}${PNK}]${FIN}";
 		echo "";
 	else
-		echo_fail;
-		echo "";
-		derror;
-		exit 0;
+		if [[ `grep -w "bullseye" "/etc/os-release"` ]]; then
+			echo -en "${PNK}[${FIN}${GRN}Debian Bullseye${FIN}${PNK}]${FIN}";
+			echo "";
+		else
+			echo -ne "${PNK}[${FIN}${RED}failed${FIN}${PNK}]${FIN}";
+			echo "";
+			echo -e "${TXT}The OS you are running is not supported${FIN}.";
+			exit 0;
+		fi
 	fi
 fi
-}
-
-echo ""
-internet_check
-distro_check
 echo ""
 echo -e "${TXT}Starting install${FIN} ..."
 sleep 1s
 if [[ `uname -m | grep x86_64` ]]; then
 	if [[ `command -v make` ]]; then
-		sudo debconf-apt-progress -- apt update;
-		sudo debconf-apt-progress -- apt upgrade -y;
+		sudo apt update;
+		sudo apt upgrade -y;
 		make ccompile;
 	else
-		sudo debconf-apt-progress -- apt update;
-		sudo debconf-apt-progress -- apt upgrade -y;
-		sudo debconf-apt-progress -- apt install -y make;
+		sudo apt update;
+		sudo apt upgrade -y;
+		sudo apt install -y make;
 		make ccompile;
 	fi
 fi
 if [[ `uname -m | grep aarch64` ]]; then
 	if [[ `command -v make` ]]; then
-		sudo debconf-apt-progress -- apt update;
-		sudo debconf-apt-progress -- apt upgrade -y;
+		sudo apt update;
+		sudo apt upgrade -y;
 		make ncompile;
 	else
-		sudo debconf-apt-progress -- apt update;
-		sudo debconf-apt-progress -- apt upgrade -y;
-		sudo debconf-apt-progress -- apt install -y make;
+		sudo apt update;
+		sudo apt upgrade -y;
+		sudo apt install -y make;
 		make ncompile;
 	fi
 fi
@@ -98,4 +70,5 @@ make dialogrc > /dev/null 2>&1
 echo ""
 clear -x
 make
+
 exit 0
