--- a/install
+++ b/install
@@ -25,8 +25,11 @@ if [[ `grep -w "jammy" "/etc/os-release"` ]]; then
 	echo "";
 else
 	if [[ `grep -w "kinetic" "/etc/os-release"` ]]; then
-		echo -en "${PNK}[${FIN}${GRN}Ubuntu Kinetic Kudu${FIN}${PNK}]${FIN}";
 		echo "";
+		echo -e "${TXT}The OS you are running is not supported${FIN}.";
+		exit 0;
+		#echo -en "${PNK}[${FIN}${GRN}Ubuntu Kinetic Kudu${FIN}${PNK}]${FIN}";
+		#echo "";
 	else
 		if [[ `grep -w "bullseye" "/etc/os-release"` ]]; then
 			echo -en "${PNK}[${FIN}${GRN}Debian Bullseye${FIN}${PNK}]${FIN}";
